# django-pattern-library

./: .babelrc.js  .coveragerc  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitpod.yml  .prettierrc.toml  .travis.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  questions.md  runserver.sh  runtests.py  setup.cfg  setup.py  sitemap.xml  skills-lock.json  stylelint.config.js  tox.ini  tox_install.sh  tsconfig.json  webpack.config.js
.agents/skills/upgrading-stylelint/: SKILL.md
.devcontainer/: devcontainer.json
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md  QUESTION.md  config.yml
.github/workflows/: ci.yml  codeql-analysis.yml
.gitlab/merge_request_templates/: new-merge-request.md
community/code-of-conduct/: index.html
community/related-projects/: index.html
community/security-policy/: index.html
community/support/: index.html
demo/: index.html
demo/pattern-library/: index.html
demo/pattern/patterns/atoms/icons/: icon.html
demo/pattern/patterns/atoms/sprites/: sprites.html
demo/pattern/patterns/atoms/tags_test_atom/: tags_test_atom.html
demo/pattern/patterns/atoms/test_atom/: test_atom.html
demo/pattern/patterns/atoms/test_atom_yml/: test_atom_yml.html
demo/pattern/patterns/atoms/test_extends/: base.html  extended.html
demo/pattern/patterns/atoms/test_includes/: test_includes.html
demo/pattern/patterns/molecules/accordion/: accordion.html
demo/pattern/patterns/molecules/button/: button.html
demo/pattern/patterns/molecules/field/: field.html
demo/pattern/patterns/molecules/test_molecule/: test_molecule.html  test_molecule_no_context.html
demo/pattern/patterns/pages/forms/: example_form.html
demo/pattern/patterns/pages/people/: person_page.html
demo/pattern/patterns/pages/search/: search.html
demo/pattern/patterns/pages/test_page/: test_page.html
demo/render-pattern/patterns/atoms/sprites/: sprites.html
demo/render-pattern/patterns/atoms/tags_test_atom/: tags_test_atom.html
demo/render-pattern/patterns/atoms/test_extends/: base.html  extended.html
demo/render-pattern/patterns/atoms/test_includes/: test_includes.html
demo/static/: main.js
docs/: README.md  dev_process.md  getting-started.md  index.md  overview.md
docs/community/: code-of-conduct.md  related-projects.md  security-policy.md  support.md
docs/guides/: automated-tests.md  customizing-template-rendering.md  defining-template-context.md  overriding-template-tags.md  reuse-across-projects.md  static-site-export.md  usage-tips.md  workflows-that-work.md
docs/overrides/: main.html
docs/recipes/: api-rendering.md  forms-and-fields.md  image-include.md  image-lazyload.md  inclusion-tags.md  looping-for-tags.md  multiple-variants.md  pagination.md
docs/reference/: api.md  concepts.md  examples.md  known-issues.md  related-projects.md
dpl-rendered-patterns/: dpl-list.txt
dpl-rendered-patterns/atoms/icons/: icon.html
dpl-rendered-patterns/atoms/sprites/: sprites.html
dpl-rendered-patterns/atoms/test_atom/: test_atom.html
dpl-rendered-patterns/atoms/test_atom_yml/: test_atom_yml.html
dpl-rendered-patterns/atoms/test_extends/: extended.html
dpl-rendered-patterns/atoms/test_includes/: test_includes.html
dpl-rendered-patterns/molecules/button/: button.html
dpl-rendered-patterns/molecules/field/: field.html
dpl-rendered-patterns/molecules/test_molecule/: test_molecule.html  test_molecule_no_context.html
dpl-rendered-patterns/pages/forms/: example_form.html
dpl-rendered-patterns/pages/people/: person_page.html
dpl-rendered-patterns/pages/search/: search.html
dpl-rendered-patterns/pages/test_page/: test_page.html
getting-started/: index.html
guides/automated-tests/: index.html
guides/customizing-template-rendering/: index.html
guides/defining-template-context/: index.html
guides/multiple-variants/: index.html
guides/overriding-template-tags/: index.html
guides/reuse-across-projects/: index.html
guides/static-site-export/: index.html
guides/usage-tips/: index.html
pattern_library/: __init__.py  apps.py  cm_utils.py  context_modifiers.py  exceptions.py  loader_tags.py  monkey_utils.py  object_utils.py  urls.py  utils.py  views.py  yaml.py
pattern_library/management/commands/: render_patterns.py
pattern_library/static/pattern_library/: package.json  webpack.config.js
pattern_library/static/pattern_library/css/: syntax.css
pattern_library/static/pattern_library/js/: highlight.pack.js
pattern_library/storybook/: main.js  middleware.js  stories.js  storybook-django.js
pattern_library/templates/pattern_library/: base.html  index.html  pattern_group.html
pattern_library/templatetags/: __init__.py  pattern_library_tags.py
recipes/api-rendering/: index.html
recipes/forms-and-fields/: index.html
recipes/image-include/: index.html
recipes/image-lazyload/: index.html
recipes/inclusion-tags/: index.html
recipes/looping-for-tags/: index.html
recipes/pagination/: index.html
reference/api/: index.html
reference/concepts/: index.html
reference/known-issues/: index.html
reference/related-projects/: index.html
search/: search_index.json
tests/: forms.py  jinja2.py  pattern_contexts.py  settings.py  test_settings.py  tests.py  urls.py  views.py
tests/jinja2/non-patterns/: include.html  variable_include.html
tests/jinja2/patterns_jinja/: base_jinja.html  base_page_jinja.html
tests/settings/: base.py  production.py
tests/static/: main.css  main.js
tests/templates/non-patterns/: include.html
tests/templates/patterns/: base.html  base_page.html
tests/templates/patterns/pages/: example_form.yaml
tests/templatetags/: test_tags.py  test_tags_invalid.py
tests/tests/: test_commands.py  test_context.py  test_context_modifiers.py  test_sections.py  test_tags.py  test_utils.py  test_views.py  test_yaml.py  utils.py
(+119 files in other folders)
