[tool.poetry]
name = "django-pattern-library"
version = "0.3.0"
description = "A module for Django that allows to build pattern libraries for your projects."
authors = [
    "Ben Dickinson <ben.dickinson@torchbox.com>"
]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/torchbox/django-pattern-library"
documentation = "https://torchbox.github.io/django-pattern-library/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
]
packages = [
    { include = "pattern_library" },
]
include = [
    'pattern_library/static/pattern_library/dist/bundle.js',
]
exclude = [
    'pattern_library/static/pattern_library/src/**/*',
]

[tool.poetry.dependencies]
python = "^3.6"
Django = ">=2.2,<4.0"
PyYAML = "^5.1"
Markdown = "^3.1"

[tool.poetry.dev-dependencies]
beautifulsoup4 = "^4.8"
coverage = "^4.5"
flake8 = "^3.7"
isort = {version = "^4.3", extras = ["pyproject"]}
mkdocs = "^1.1.2"
mkdocs-material = "^5.5.14"
pymdown-extensions = "^8.0"
mkdocs-git-revision-date-plugin = "^0.3.1"

[tool.isort]
known_first_party = "pattern_library"
known_django = "django"
skip = ".tox,venv,migrations,node_modules"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"
multi_line_output = 5

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
