[tool.poetry]
name = "django-pattern-library"
version = "1.0.0"
description = "A module for Django that allows to build pattern libraries for your projects."
authors = [
    "Ben Dickinson <ben.dickinson@torchbox.com>",
    "Thibaud Colas <thibaud.colas@torchbox.com>",
]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/torchbox/django-pattern-library"
documentation = "https://torchbox.github.io/django-pattern-library/"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
]
packages = [
    { include = "pattern_library" },
]
include = [
    'pattern_library/static/pattern_library/dist/bundle.js',
]
exclude = [
    'pattern_library/static/pattern_library/src/**/*',
]

[tool.poetry.urls]
"Demo" = "https://torchbox.github.io/django-pattern-library/demo/"
"Support" = "https://github.com/torchbox/django-pattern-library/discussions"
"Issues" = "https://github.com/torchbox/django-pattern-library/issues"

[tool.poetry.dependencies]
python = "^3.7"
Django = ">=3.2,<4.3"
PyYAML = ">=5.1,<7.0"
Markdown = "^3.1"

# A list of all of the dev dependencies, some of which are included in the
# below `extras`. They can be opted into by apps.
beautifulsoup4 = { version = "^4.8", optional = true }
coverage = { version = "^6.2", optional = true }
flake8 = { version = "^3.7", optional = true }
isort = { version = "^5.10.1", optional = true}
mkdocs = { version = "^1.1.2", optional = true}
mkdocs-material = { version = "^5.5.14", optional = true}
pymdown-extensions = { version = "^8.0", optional = true}
mkdocs-git-revision-date-plugin = { version = "^0.3.1", optional = true}
mkdocs-redirects = { version = "^1.0.3", optional = true}
black = { version = "^22.3.0", optional = true}

[tool.poetry.extras]
test = [
    "beautifulsoup4", "coverage", "flake8",
    "isort", "mkdocs", "mkdocs-material",
    "pymdown-extensions", "mkdocs-git-revision-date-plugin",
    "mkdocs-redirects", "black"
]

[tool.isort]
known_first_party = "pattern_library"
known_django = "django"
skip = ".tox,venv,migrations,node_modules"
skip_gitignore = true
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
