[tool.poetry]
name = "django-pattern-library"
version = "1.5.0"
description = "A module for Django that allows to build pattern libraries for your projects."
authors = [
    "Thibaud Colas <thibaud.colas@torchbox.com>",
]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/torchbox/django-pattern-library"
documentation = "https://torchbox.github.io/django-pattern-library/"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
]
packages = [
    { include = "pattern_library" },
]
include = [
    { path = "pattern_library/static/pattern_library/dist/bundle.js", format = [
        "sdist",
        "wheel",
    ] },
]
exclude = [
    'pattern_library/static/pattern_library/src/**/*',
]

[tool.poetry.urls]
"Demo" = "https://torchbox.github.io/django-pattern-library/demo/"
"Support" = "https://github.com/torchbox/django-pattern-library/discussions"
"Issues" = "https://github.com/torchbox/django-pattern-library/issues"

[tool.poetry.dependencies]
python = "^3.9"
Django = ">=4.2"
PyYAML = ">=5.1,<7.0"
Markdown = "^3.1"

[tool.poetry.dev-dependencies]
beautifulsoup4 = "^4.8"
coverage = "^7.4"
flake8 = {version = "^7.0", python = ">=3.8.1,<4.0"}
isort = "^5.10.1"
mkdocs = "^1.1.2"
mkdocs-material = "^5.5.14"
pymdown-extensions = "^10.0"
mkdocs-git-revision-date-plugin = "^0.3.1"
mkdocs-redirects = "^1.0.3"
black = "^25.1.0"

[tool.isort]
known_first_party = "pattern_library"
known_django = "django"
skip = ".tox,venv,migrations,node_modules"
skip_gitignore = true
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
