[bdist_wheel]
universal = 1

[metadata]
description-file = README.md

[flake8]
max-line-length=120
exclude=migrations

[isort]
known_first_party=pattern_library
known_django=django
skip=migrations
sections=FUTURE, STDLIB, DJANGO, THIRDPARTY, FIRSTPARTY, LOCALFOLDER
default_section=THIRDPARTY
multi_line_output=5
