[bdist_wheel]
python-tag = py3

[metadata]
description-file = README.md

[flake8]
max-line-length=120
exclude=.tox,migrations,node_modules

[isort]
known_first_party=pattern_library
known_django=django
skip=migrations, .tox
sections=FUTURE, STDLIB, DJANGO, THIRDPARTY, FIRSTPARTY, LOCALFOLDER
default_section=THIRDPARTY
multi_line_output=5

[coverage:run]
source = pattern_library
